testsuite/tests/overloadedstrings/should_fail/T25926.hs
module T25926 where

f () 0 = ()
f 'a' _ = ()
